--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,6 @@
-<p>about works!</p>
+<div>
+    <app-profile-picture></app-profile-picture>
+    <app-name-job></app-name-job>
+    <app-text></app-text>
+</div>
+
