--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <div class="main-container">
-    <app-header></app-header>
-    <app-about></app-about>
+    <app-header>
+    </app-header>
+
+    <app-about 
+    class="d-flex justify-content-center align-items-center">
+    </app-about>
 </div>
