layou del componente about

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,6 +1,12 @@
-<div>
-    <app-profile-picture></app-profile-picture>
-    <app-name-job></app-name-job>
-    <app-text></app-text>
+<div id="container"class="row d-flex align-items-center justify-content-between" style="background: red;">
+    <app-profile-picture class="col-12 col-md-3 d-flex justify-content-center" style="background: green;">
+    </app-profile-picture>
+
+    <app-name-job class="col-12 col-md-9 d-flex flex-column justify-content-center justify-content-md-start"
+    style="background: blue;">
+    </app-name-job>
+
+    <app-text class="col-12 d-flex justify-content-center align-items-center" style="background: yellow;">
+    </app-text>
 </div>
 
