--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,14 @@
     <app-about 
     class="d-flex justify-content-center align-items-center">
     </app-about>
+
+    <div class="col d-flex align-items-center justify-content-around">
+        <app-education 
+        class="d-flex justify-content-center align-items-center">
+        </app-education>
+        <app-education 
+        class="d-flex justify-content-center align-items-center">
+        </app-education>
+    </div>
+
 </div>
