--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -1,1 +1,8 @@
-<p>education works!</p>
+<div id="education" class="container row align-items-center justify-content-center">
+    <div class="col-4">
+        <app-logo></app-logo>
+    </div>
+    <div class="col">
+        <app-information></app-information>
+    </div>
+</div>
