--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,1 +1,8 @@
-<p>experience works!</p>
+<div id="experience" class="container row align-items-center justify-content-center">
+    <div class="col-4">
+        <app-logo-exp></app-logo-exp>
+    </div>
+    <div class="col">
+        <app-information-exp></app-information-exp>
+    </div>
+</div>
