--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,4 +15,13 @@
         </app-education>
     </div>
 
+    <div class="col d-flex align-items-center justify-content-around">
+        <app-experience
+        class="d-flex justify-content-center align-items-center">
+        </app-experience> 
+        <app-experience
+        class="d-flex justify-content-center align-items-center">
+        </app-experience> 
+    </div>
+
 </div>
