--- a/src/app/components/header/social-media/social-media.component.html
+++ b/src/app/components/header/social-media/social-media.component.html
@@ -1,9 +1,27 @@
+<div id="social-media" class="container-fluid col d-flex ">
+    <div class="links">
+        <a [href]="instagramLink" target="_blank">
+            <fa-icon [icon]="instagram">
+            </fa-icon>
+        </a>
+    </div>
 
-<a [href]="instagramLink" target="_blank"><fa-icon [icon]="instagram"></fa-icon></a>
-    
-<a [href]="twitterLink" target="_blank"><fa-icon [icon]="twitter"></fa-icon></a>
+    <div class="links">
+        <a [href]="twitterLink" target="_blank">
+            <fa-icon [icon]="twitter">
+            </fa-icon>
+        </a>
+    </div>
 
-<a [href]="gitHubLink" target="_blank"><fa-icon [icon]="gitHub"></fa-icon></a> 
+
+    <div class="links">
+        <a [href]="gitHubLink" target="_blank">
+            <fa-icon [icon]="gitHub">
+            </fa-icon>
+        </a> 
+    </div>
+</div>
+
 
     
 
