--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,12 +1,16 @@
-<div id="container"class="row d-flex align-items-center justify-content-between" style="background: red;">
-    <app-profile-picture class="col-12 col-md-3 d-flex justify-content-center" style="background: green;">
+<!--
+    * agregar botones de edicion.
+    * agregar foto.
+-->
+
+<div id="container"class="row d-flex align-items-center justify-content-between">
+    <app-profile-picture class="col-12 col-md-3 d-flex justify-content-center">
     </app-profile-picture>
 
-    <app-name-job class="col-12 col-md-9 d-flex flex-column justify-content-center justify-content-md-start"
-    style="background: blue;">
+    <app-name-job class="col-12 col-md-9 d-flex justify-content-center justify-content-md-start">
     </app-name-job>
 
-    <app-text class="col-12 d-flex justify-content-center align-items-center" style="background: yellow;">
+    <app-text class="col-12 d-flex justify-content-center align-items-center">
     </app-text>
 </div>
 
