--- a/src/app/components/about/name-job/name-job.component.html
+++ b/src/app/components/about/name-job/name-job.component.html
@@ -1,1 +1,13 @@
-<p>name-job works!</p>
+<div>
+    <div class="col-12" >
+        <h2>{{name}}</h2>
+    </div>
+    <div class="col-12" >
+        <p>{{job}}</p>
+    </div>
+</div>
+
+
+
+
+
