--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,8 @@
 
 :root{
     --background-primary: #082032;
+    --background-primary-transparent: #082032b7;
+
 
     --font-color-white: #f9fafa;
     --font-color-pink: #ff6584;
