--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -1,7 +1,8 @@
 #container{
-    width: 90vw;
+    width: 85vw;
     background-color: var(--background-primary);
     padding: 1em;
     color: var(--font-color-white);
     border-radius: 0.5em;
+    margin-bottom: 3.5em;
 }
