--- a/src/app/components/education/education.component.css
+++ b/src/app/components/education/education.component.css
@@ -1,3 +1,16 @@
-#education{
-    background-color: red;
+#container{
+    width: 85vw;
+}
+
+.title{
+    margin-bottom: 1.5em;
+    padding: 0.5em;
+    border-radius: 0.5em;
+    width: 50vw;
+    background-color: var(--background-primary);
+    color: var(--font-color-yellow);
+}
+
+app-card{
+    padding-bottom: 1.5em;
 }
