--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -1,8 +1,10 @@
-<div id="education" class="container row align-items-center justify-content-center">
-    <div class="col-4">
-        <app-logo></app-logo>
-    </div>
-    <div class="col">
-        <app-information></app-information>
-    </div>
+<div id="container">
+  <div class="title d-flex justify-content-center">
+    <h2>{{title}}</h2>
+  </div>
+
+  <div class="d-flex row justify-content-around align-items-center">
+    <app-card class="col-12 col-md-5"></app-card>
+    <app-card class="col-12 col-md-5"></app-card>
+  </div>
 </div>
