responsive y car experience

--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,8 +1,10 @@
-<div id="experience" class="container row align-items-center justify-content-center">
-    <div class="col-4">
-        <app-logo-exp></app-logo-exp>
+<div id="container">
+    <div class="title d-flex justify-content-center">
+      <h2>{{title}}</h2>
     </div>
-    <div class="col">
-        <app-information-exp></app-information-exp>
+  
+    <div class="d-flex row justify-content-around align-items-center">
+      <app-card-exp class="col-12 col-md-5"></app-card-exp>
+      <app-card-exp class="col-12 col-md-5"></app-card-exp>
     </div>
-</div>
+  </div>
