--- a/src/app/components/experience/information-exp/information-exp.component.html
+++ b/src/app/components/experience/information-exp/information-exp.component.html
@@ -1,3 +1,6 @@
-<h3>{{lugar}}</h3>
-<p>{{puesto}}</p>
-<p>{{anios}}</p>
+<div id="information">
+    <h3>{{lugar}}</h3>
+    <p>{{puesto}}</p>
+    <p>{{anios}}</p>
+</div>
+
