--- a/src/app/components/about/name-job/name-job.component.html
+++ b/src/app/components/about/name-job/name-job.component.html
@@ -2,8 +2,9 @@
     <div class="col-12" >
         <h2>{{name}}</h2>
     </div>
-    <div class="col-12" >
+    <div class="d-flex col-12 align-items-center" >
         <p>{{job}}</p>
+        <app-button-edit-about></app-button-edit-about>
     </div>
 </div>
 
