--- a/src/app/components/about/text/text.component.html
+++ b/src/app/components/about/text/text.component.html
@@ -1,1 +1,7 @@
-<p>{{about}}</p>
+<div id="container">
+    <div class="d-flex justify-content-end">
+        <app-button-edit-about></app-button-edit-about>
+    </div>
+    <p>{{about}}</p>
+</div>
+
