--- a/src/app/components/experience/card-exp/card-exp.component.html
+++ b/src/app/components/experience/card-exp/card-exp.component.html
@@ -1,5 +1,11 @@
+<div id="container-buttons" class="d-flex justify-content-center">
+        <div class="buttons">
+            <app-button-edit-experience class="col-6"></app-button-edit-experience>
+            <app-button-deleted-experience class="col-6"></app-button-deleted-experience>
+        </div>
+    </div>
 <div id="card" class="container d-flex align-items-center justify-content-center">
-    <app-logo-exp class="col-3"></app-logo-exp>
-    <app-information-exp class="col-8"></app-information-exp>
+        <app-logo-exp class="col-3"></app-logo-exp>
+        <app-information-exp class="col-8"></app-information-exp>
 </div>
 
