--- a/src/app/components/about/profile-picture/profile-picture.component.html
+++ b/src/app/components/about/profile-picture/profile-picture.component.html
@@ -1,2 +1,11 @@
-<img [src]="imgProfile" [alt]="profileAlt" class="img-fluid">
+<div class="row">
+    <div class="col-12">
+        <img [src]="imgProfile" [alt]="profileAlt" class="img-fluid">
+    </div>
+    
+
+    <div class="col-12 d-flex justify-content-end">
+        <app-button-edit-about></app-button-edit-about>
+    </div>
+</div>
 
