--- a/src/app/components/education/card/card.component.html
+++ b/src/app/components/education/card/card.component.html
@@ -1,3 +1,10 @@
+<div id="container-buttons" class="d-flex justify-content-center">
+    <div class="buttons">
+        <app-button-edit-education class="col-6"></app-button-edit-education>
+        <app-button-deleted-education class="col-6"></app-button-deleted-education>
+    </div>
+</div>
+
 <div id="card" class="container d-flex align-items-center justify-content-center">
     <app-logo class="col-3"></app-logo>
     <app-information class="col-8"></app-information>
