--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -1,6 +1,7 @@
 <div id="container">
-  <div class="title d-flex justify-content-center">
+  <div class="title d-flex justify-content-around">
     <h2>{{title}}</h2>
+    <app-button-edit-education></app-button-edit-education>
   </div>
 
   <div class="d-flex row justify-content-around align-items-center">
