--- a/src/app/components/experience/card-exp/card-exp.component.css
+++ b/src/app/components/experience/card-exp/card-exp.component.css
@@ -5,3 +5,11 @@
     color: var(--font-color-white);
     border-radius: 0.5em;   
 }
+
+#container-buttons{
+    margin-bottom: 1em;
+}
+.buttons{
+    background-color: var(--background-primary);
+    border-radius: 0.5em;
+}
