layout y responsive skills

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,20 +2,22 @@
     <app-header>
     </app-header>
 
-    <app-about 
-    class="d-flex justify-content-center align-items-center">
+    <app-about class="d-flex justify-content-center align-items-center">
     </app-about>
 
-    <div class="col d-flex align-items-center justify-content-around">
+    <div class="d-flex align-items-center justify-content-around">
         <app-education 
         class="d-flex justify-content-center align-items-center">
         </app-education>
     </div>
 
-    <div class="col d-flex align-items-center justify-content-around">
+    <div class="d-flex align-items-center justify-content-around">
         <app-experience
         class="d-flex justify-content-center align-items-center">
         </app-experience> 
     </div>
     
+    <div class="d-flex justify-content-center align-items-center">
+        <app-skills></app-skills>
+    </div>
 </div>
