--- a/src/app/components/skills/soft-skills/soft-skills.component.html
+++ b/src/app/components/skills/soft-skills/soft-skills.component.html
@@ -1,1 +1,14 @@
-<p>soft-skills works!</p>
+<div id="container">
+    <div class="title d-flex justify-content-around">
+        <h2>{{title}}</h2>
+    <app-button-edit-skills></app-button-edit-skills>
+    </div>
+
+    <div class="d-flex row justify-content-around align-items-center">
+        <app-card-soft-skill class="col-6 col-sm-4 col-md-3 "></app-card-soft-skill>
+        <app-card-soft-skill class="col-6 col-sm-4 col-md-3 "></app-card-soft-skill>
+        <app-card-soft-skill class="col-6 col-sm-4 col-md-3 "></app-card-soft-skill>
+        <app-card-soft-skill class="col-6 col-sm-4 col-md-3 "></app-card-soft-skill>
+        <app-card-soft-skill class="col-6 col-sm-4 col-md-3 "></app-card-soft-skill>
+    </div>
+</div>
