--- a/src/app/components/about/name-job/name-job.component.html
+++ b/src/app/components/about/name-job/name-job.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="d-flex col-12 align-items-center" >
         <p>{{job}}</p>
-        <app-button-edit-about></app-button-edit-about>
+        <app-edit-button></app-edit-button>
     </div>
 </div>
 
