--- a/src/app/components/about/profile-picture/profile-picture.component.html
+++ b/src/app/components/about/profile-picture/profile-picture.component.html
@@ -5,7 +5,7 @@
     
 
     <div class="col-12 d-flex justify-content-end">
-        <app-button-edit-about></app-button-edit-about>
+        <app-edit-button></app-edit-button>
     </div>
 </div>
 
