--- a/src/app/components/about/text/text.component.html
+++ b/src/app/components/about/text/text.component.html
@@ -1,6 +1,6 @@
 <div id="container">
     <div class="d-flex justify-content-end">
-        <app-button-edit-about></app-button-edit-about>
+        <app-edit-button></app-edit-button>
     </div>
     <p>{{about}}</p>
 </div>
