--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -1,11 +1,11 @@
-<div id="container">
+<div id="container" >
   <div class="title d-flex justify-content-around">
     <h2>{{title}}</h2>
-    <app-button-edit-education></app-button-edit-education>
+    <app-edit-button></app-edit-button>
   </div>
 
-  <div class="d-flex row justify-content-around align-items-center">
+
     <app-card class="col-12 col-md-5"></app-card>
-    <app-card class="col-12 col-md-5"></app-card>
-  </div>
+
+
 </div>
