--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -6,3 +6,28 @@
     border-radius: 0.5em;
     margin-bottom: 3.5em;
 }
+
+#img-profile{
+    width: 15em;
+    border-radius: 50vw;
+}
+
+
+#name{
+    font-size: 3em;
+    color: var(--font-color-yellow);
+}
+
+#position{
+    font-size: 1.8em;
+    color: var(--font-color-pink);
+    margin: 0;
+}
+
+#about-container{
+    margin: 1em 0 0.5em 0;
+}
+
+#about-text{
+    font-size: 1.1em;
+}
