--- a/src/app/components/experience/card-exp/card-exp.component.css
+++ b/src/app/components/experience/card-exp/card-exp.component.css
@@ -9,7 +9,17 @@
 #container-buttons{
     margin-bottom: 1em;
 }
+
 .buttons{
     background-color: var(--background-primary);
     border-radius: 0.5em;
+}
+
+#logo-lugar{
+    width: 8em;
+    border-radius: 50vw;
+}
+
+#information{
+    padding-left: 1em;
 }
