--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,11 +1,10 @@
 <div id="container">
     <div class="title d-flex justify-content-around">
       <h2>{{title}}</h2>
-      <app-button-edit-experience></app-button-edit-experience>
+      <app-edit-button></app-edit-button>
     </div>
   
-    <div class="d-flex row justify-content-around align-items-center">
-      <app-card-exp class="col-12 col-md-5"></app-card-exp>
-      <app-card-exp class="col-12 col-md-5"></app-card-exp>
-    </div>
+
+      <app-card-exp></app-card-exp>
+
   </div>
