--- a/src/app/components/skills/hard-skills/hard-skills.component.html
+++ b/src/app/components/skills/hard-skills/hard-skills.component.html
@@ -1,7 +1,7 @@
 <div id="container">
     <div class="title d-flex justify-content-around">
         <h2>{{title}}</h2>
-    <app-button-edit-skills></app-button-edit-skills>
+    <app-edit-button></app-edit-button>
     </div>
 
     <div class="d-flex row justify-content-around align-items-center">
