hard y soft skills, lista de iconos

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -30,7 +30,7 @@
       <div class="d-flex justify-content-end">
         <app-edit-button></app-edit-button>
       </div>
-      <p id="about-text">{{ about.about }}</p>
+      <p id="about-text">{{ about.text }}</p>
     </div>
   </div>
 </div>
