--- a/src/app/components/skills/soft-skills/soft-skills.component.html
+++ b/src/app/components/skills/soft-skills/soft-skills.component.html
@@ -4,11 +4,6 @@
     <app-edit-button></app-edit-button>
     </div>
 
-    <div class="d-flex row justify-content-around align-items-center">
-        <app-card-soft-skill class="col-6 col-sm-4 col-md-3 "></app-card-soft-skill>
-        <app-card-soft-skill class="col-6 col-sm-4 col-md-3 "></app-card-soft-skill>
-        <app-card-soft-skill class="col-6 col-sm-4 col-md-3 "></app-card-soft-skill>
-        <app-card-soft-skill class="col-6 col-sm-4 col-md-3 "></app-card-soft-skill>
-        <app-card-soft-skill class="col-6 col-sm-4 col-md-3 "></app-card-soft-skill>
-    </div>
+
+        <app-card-soft-skill></app-card-soft-skill>
 </div>
