--- a/src/app/components/skills/hard-skills/hard-skills.component.html
+++ b/src/app/components/skills/hard-skills/hard-skills.component.html
@@ -3,12 +3,5 @@
         <h2>{{title}}</h2>
     <app-edit-button></app-edit-button>
     </div>
-
-    <div class="d-flex row justify-content-around align-items-center">
-        <app-card-hard-skill class="col-6 col-sm-4 col-md-3 "></app-card-hard-skill>
-        <app-card-hard-skill class="col-6 col-sm-4 col-md-3 "></app-card-hard-skill>
-        <app-card-hard-skill class="col-6 col-sm-4 col-md-3"></app-card-hard-skill>
-        <app-card-hard-skill class="col-6 col-sm-4 col-md-3 "></app-card-hard-skill>
-        <app-card-hard-skill class="col-6 col-sm-4 col-md-3 "></app-card-hard-skill>
-    </div>
+    <app-card-hard-skill></app-card-hard-skill>
 </div>
