--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,16 @@
 <div class="main-container">
+
+    
     <app-header>
     </app-header>
 
     <app-about class="d-flex justify-content-center align-items-center">
     </app-about>
 
+    <app-buttons-nav></app-buttons-nav>
+
+    <router-outlet></router-outlet>
+<!--
     <div class="d-flex align-items-center justify-content-around">
         <app-education 
         class="d-flex justify-content-center align-items-center">
@@ -22,6 +28,6 @@
     <div class="d-flex justify-content-center align-items-center">
         <app-skills></app-skills>
     </div>
-
+-->
 
 </div>
