--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -2,12 +2,15 @@
   id="container"
   class="row d-flex align-items-center justify-content-between"
 >
+
+<div class="row col-12 justify-content-end">
+  <app-edit-button class="col-1"></app-edit-button>
+</div>
+
+
   <div class="row col-12 col-md-3 d-flex justify-content-center">
     <div class="col-12">
       <img id="img-profile" [src]="about.profileImg" class="img-fluid" />
-    </div>
-    <div class="col-12 d-flex justify-content-end">
-      <app-edit-button></app-edit-button>
     </div>
   </div>
 
@@ -20,16 +23,12 @@
       </div>
       <div class="d-flex col-12 align-items-center">
         <p id="position">{{ about.position }}</p>
-        <app-edit-button></app-edit-button>
       </div>
     </div>
   </div>
 
   <div class="col-12 d-flex justify-content-center align-items-center">
     <div id="about-container">
-      <div class="d-flex justify-content-end">
-        <app-edit-button></app-edit-button>
-      </div>
       <p id="about-text">{{ about.text }}</p>
     </div>
   </div>
