--- a/src/app/components/experience/card-exp/card-exp.component.html
+++ b/src/app/components/experience/card-exp/card-exp.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex row justify-content-around align-items-center">
-  <div *ngFor="let experience of experiences" class="col-12 col-md-5">
+  <div id="card-container" *ngFor="let experience of experiences" class="col-12 col-md-5">
     <div id="container-buttons" class="d-flex justify-content-center">
       <div class="buttons">
         <app-edit-button class="col-6"></app-edit-button>
