--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,4 @@
-<!--
-    * Terminar el boton.
--->
+
 
 
 <header class="container-fluid row d-flex align-items-center justify-content-between">
@@ -16,6 +14,6 @@
     </div>
 
     <div class=" col-4 col-sm   order-2 order-sm-3 d-flex justify-content-end align-items-center">
-        <app-boton-login-logout></app-boton-login-logout>
+        <a routerLink="/SigIn" target="_blank"><app-boton-login-logout></app-boton-login-logout></a>
     </div>
 </header>
