--- a/src/app/components/buttons/edit-button/edit-button.component.html
+++ b/src/app/components/buttons/edit-button/edit-button.component.html
@@ -1,1 +1,5 @@
-<button class="btn btn-outline-warning"><fa-icon [icon]="faPen"></fa-icon></button>
+
+  <button class="btn btn-outline-warning">
+    <fa-icon [icon]="faPen"></fa-icon>
+  </button>
+
