--- a/src/app/components/education/card/card.component.css
+++ b/src/app/components/education/card/card.component.css
@@ -1,7 +1,11 @@
+#card-container{
+    margin-top: 2em;
+}
 
 #container-buttons{
     margin-bottom: 1em;
 }
+
 .buttons{
     background-color: var(--background-primary);
     border-radius: 0.5em;
