--- a/src/app/components/education/card/card.component.html
+++ b/src/app/components/education/card/card.component.html
@@ -1,26 +1,25 @@
-
 <div class="d-flex row justify-content-around align-items-center">
-<div *ngFor="let education of educations" class="col-12 col-md-5">
-  <div id="container-buttons" class="d-flex justify-content-center">
-    <div class="buttons">
-      <app-edit-button class="col-6"></app-edit-button>
-      <app-delete-button class="col-6"></app-delete-button>
+  <div id="card-container" *ngFor="let education of educations" class="col-12 col-md-5">
+    <div id="container-buttons" class="d-flex justify-content-center">
+      <div class="buttons">
+        <app-edit-button class="col-6"></app-edit-button>
+        <app-delete-button class="col-6"></app-delete-button>
+      </div>
     </div>
-  </div>
-  <div
-    id="card"
-    class="container d-flex align-items-center justify-content-center"
-  >
-    <div class="col-3">
-      <img id="logo-lugar" [src]="education.img" class="img-fluid" />
-    </div>
-    <div class="col-8">
-      <div id="information">
-        <h3>{{ education.school }}</h3>
-        <p>{{ education.title }}</p>
-        <p>{{ education.anios }}</p>
+    <div
+      id="card"
+      class="container d-flex align-items-center justify-content-center"
+    >
+      <div class="col-3">
+        <img id="logo-lugar" [src]="education.img" class="img-fluid" />
+      </div>
+      <div class="col-8">
+        <div id="information">
+          <h3>{{ education.school }}</h3>
+          <p>{{ education.title }}</p>
+          <p>{{ education.anios }}</p>
+        </div>
       </div>
     </div>
   </div>
-</div>
 </div>
