background y componente buttons nav

--- a/src/app/components/buttons/buttons-nav/buttons-nav.component.html
+++ b/src/app/components/buttons/buttons-nav/buttons-nav.component.html
@@ -1,16 +1,16 @@
-<div class="container">
-  <nav>
+
+  <nav class="d-flex align-items-center justify-content-around">
     <button class="btn btn-outline-warning">
-      <a routerLink="Education">educacion</a>
+      <a routerLink="Education"><strong>EDUCACION</strong></a>
     </button>
     <button class="btn btn-outline-warning">
-      <a routerLink="Expeience">experiencia</a>
+      <a routerLink="Expeience"><strong>EXPERIENCIA</strong></a>
     </button>
     <button class="btn btn-outline-warning">
-      <a routerLink="Skills">sills</a>
+      <a routerLink="Skills"><strong>SKILLS</strong></a>
     </button>
     <button class="btn btn-outline-warning">
-      <a routerLink="Proyects">proyectos</a>
+      <a routerLink="Proyects"><strong>PROYECTOS</strong></a>
     </button>
   </nav>
-</div>
+
