--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,3 +1,6 @@
+<div class="d-flex align-items-center justify-content-around">
+<div class="d-flex justify-content-center align-items-center">
+
 <div id="container">
     <div class="title d-flex justify-content-around">
       <h2>{{title}}</h2>
@@ -6,5 +9,6 @@
   
 
       <app-card-exp></app-card-exp>
-
+    </div>
+  </div>
   </div>
