--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="main-container">
+<div class="main-container" [ngStyle]="{'background-image': 'url(' + background + ')','background-size':'cover'}">
 
     
     <app-header>
@@ -10,24 +10,6 @@
     <app-buttons-nav></app-buttons-nav>
 
     <router-outlet></router-outlet>
-<!--
-    <div class="d-flex align-items-center justify-content-around">
-        <app-education 
-        class="d-flex justify-content-center align-items-center">
-        </app-education>
-    </div>
-
     
-    <div class="d-flex align-items-center justify-content-around">
-        <app-experience
-        class="d-flex justify-content-center align-items-center">
-        </app-experience> 
-    </div>
-
-
-    <div class="d-flex justify-content-center align-items-center">
-        <app-skills></app-skills>
-    </div>
--->
 
 </div>
