--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -1,11 +1,11 @@
-<div id="container" >
-  <div class="title d-flex justify-content-around">
-    <h2>{{title}}</h2>
-    <app-edit-button></app-edit-button>
+<div class="d-flex align-items-center justify-content-around">
+  <div class="d-flex justify-content-center align-items-center">
+    <div id="container">
+      <div class="title d-flex justify-content-around">
+        <h2>{{ title }}</h2>
+        <app-edit-button></app-edit-button>
+      </div>
+      <app-card class="col-12 col-md-5"></app-card>
+    </div>
   </div>
-
-
-    <app-card class="col-12 col-md-5"></app-card>
-
-
 </div>
