--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -4,7 +4,7 @@
 >
 
 <div class="row col-12 justify-content-end">
-  <app-edit-button class="col-1"></app-edit-button>
+  <app-modal-about></app-modal-about>
 </div>
 
 
