--- a/src/app/components/education/card/card.component.html
+++ b/src/app/components/education/card/card.component.html
@@ -3,7 +3,7 @@
     <div id="container-buttons" class="d-flex justify-content-center">
       <div id="sub-container-buttons">
 
-        <app-edit-button class="col-6"></app-edit-button>
+        <app-modal-education class="col-6"></app-modal-education>
         <app-delete-button class="col-6"></app-delete-button>
       </div>
     </div>
