--- a/src/app/components/experience/card-exp/card-exp.component.html
+++ b/src/app/components/experience/card-exp/card-exp.component.html
@@ -4,7 +4,7 @@
     <div id="container-buttons" class="d-flex justify-content-center">
       <div id="sub-container-buttons">
 
-        <app-edit-button class="col-6"></app-edit-button>
+        <app-modal-experience class="col-6"></app-modal-experience>
         <app-delete-button class="col-6"></app-delete-button>
       </div>
     </div>
