--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,6 +11,7 @@
     </div>
 
     <div class=" col-4 col-sm   order-2 order-sm-3 d-flex justify-content-end align-items-center">
-        <a routerLink="/SigIn" target="_blank"><app-boton-login-logout></app-boton-login-logout></a>
+        <app-modal-login></app-modal-login>
+
     </div>
 </header>
