--- a/src/app/components/header/boton-login-logout/boton-login-logout.component.html
+++ b/src/app/components/header/boton-login-logout/boton-login-logout.component.html
@@ -1,3 +1,6 @@
-<button type="button" class="btn btn-outline-warning" data-toggle="modal" data-target="#exampleModal">Sign in <fa-icon [icon]="signIn"></fa-icon></button>
+<button class="btn btn-outline-warning"> 
+    Sign In
+    <fa-icon [icon]="signIn"></fa-icon>
+</button>
 
 
