--- a/src/app/components/education/card/card.component.html
+++ b/src/app/components/education/card/card.component.html
@@ -18,7 +18,7 @@
         <div id="information">
           <h3>{{ education.school }}</h3>
           <p>{{ education.title }}</p>
-          <p id="anios"><strong>{{ education.anios }}</strong></p>
+          <p id="anios"><strong>{{ education.comienzo }} - {{education.final}}</strong></p>
         </div>
       </div>
     </div>
