--- a/src/app/components/experience/card-exp/card-exp.component.html
+++ b/src/app/components/experience/card-exp/card-exp.component.html
@@ -22,7 +22,7 @@
           <h3>{{ experience.companie }}</h3>
           <p>{{ experience.job }}</p>
 
-          <p id="anios"><strong>{{ experience.anios }}</strong></p>
+          <p id="anios"><strong>{{ experience.comienzo }} - {{experience.final}}</strong></p>
 
         </div>
       </div>
