--- a/src/app/components/modales/modal-login/modal-login.component.html
+++ b/src/app/components/modales/modal-login/modal-login.component.html
@@ -24,17 +24,44 @@ data-bs-target="#loginModal"></app-boton-login-logout>
           aria-label="Close"
         ></button>
       </div>
-      <form action="#">
+
+      <form [formGroup]="form" (ngSubmit)="onEnviar($event)"  action="#">
       <div class="modal-body d-flex row justify-content-betwen">
-        <p><strong>Usuario</strong></p>
-          <input type="text" placeholder="Usuario" required /> 
-          <p><strong>Contraseña</strong></p>
-          <input type="password" placeholder="Contraseña" required />       
+
+        <div>
+          <label for="email"><p><strong>Email:</strong></p></label>
+          <input type="mail" formControlName="email" placeholder="Email" required /> 
+        </div>
+
+        <div *ngIf="Mail?.errors  && Mail?.touched">    
+          <p *ngIf="Mail?.hasError('required')" class="error">
+              El email es requerido.
+          </p>
+          <p *ngIf="Mail?.hasError('email')" class="error">
+              El formato del email debe ser válido.
+            </p>
+      </div>
+
+        <div>
+          <label for="password" class="form-label"><p><strong>Contraseña:</strong></p></label>
+          <input type="password" formControlName="password" placeholder="Contraseña" required /> 
+        </div>   
+        
+        <div *ngIf="Password?.errors  && Password?.touched">
+          <p *ngIf="Password?.hasError('required')" class="error">
+            El password es requerido.
+          </p>
+          <p *ngIf="Password?.errors?.['minlength']" class="error">
+            El password debe ser de 8 o más caracteres.
+          </p>
+        </div>
+
       </div>
       <div class="modal-footer">
         <button type="submit" class="btn btn-outline-warning"><strong>Sign In</strong></button>
       </div>
     </form>
+
     </div>
   </div>
 </div>
