--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,16 +1,17 @@
 <div
   id="container"
   class="row d-flex align-items-center justify-content-between"
+  *ngFor="let aboutA of about"
 >
 
-<div class="row col-12 justify-content-end">
-  <app-modal-about></app-modal-about>
+<div class="col-12 d-flex justify-content-end">
+  <app-modal-about (editAbout)="editAbout($event)"></app-modal-about>
 </div>
 
 
   <div class="row col-12 col-md-3 d-flex justify-content-center">
-    <div class="col-12">
-      <img id="img-profile" [src]="about.profileImg" class="img-fluid" />
+    <div class="col-12 d-flex justify-content-center">
+      <img id="img-profile" [src]="aboutA.profileImg" class="img-fluid" />
     </div>
   </div>
 
@@ -19,17 +20,17 @@
   >
     <div>
       <div class="col-12">
-        <h2 id="name">{{ about.name }}</h2>
+        <h2 id="name">{{ aboutA.name }}</h2>
       </div>
       <div class="d-flex col-12 align-items-center">
-        <p id="position">{{ about.position }}</p>
+        <p id="position">{{ aboutA.position }}</p>
       </div>
     </div>
   </div>
 
   <div class="col-12 d-flex justify-content-center align-items-center">
     <div id="about-container">
-      <p id="about-text">{{ about.text }}</p>
+      <p id="about-text" >{{aboutA.text}}</p>
     </div>
   </div>
 </div>
